test/sema/traits/impl_non_existing_method.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s
trait A {
  fn foo();
}

struct S {
  impl A {
    // CHECK: [[# @LINE + 1]]:8: error: failed to find member function 'bar' in 'A'
    fn bar() {}
  }
}

fn main() {}
